tests/invalid_tests/missing_semicolon.minijava
class MissingSemicolon {
    public static void main() {
        int x;
        x = 5;
        System.out.println(x)
    }
}
